--- a/src/index.html
+++ b/src/index.html
@@ -11,148 +11,155 @@
     <!-- feathericons -->
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
+    <!-- tailwindcss -->
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- student information -->
-    <div>
-        <label for="">First Name</label>
-        <input type="text" name="" id="">
-    </div>
-    <div>
-        <label for="">Middle Name</label>
-        <input type="text" name="" id="">
-    </div>
-    <div>
-        <label for="">Last Name</label>
-        <input type="text" name="" id="">
-    </div>
-    <div>
-        <label for="">Month</label>
-        <select name="" id="">
-            <option value="">January</option>
-            <option value="">February</option>
-            <option value="">March</option>
-            <option value="">April</option>
-            <option value="">May</option>
-            <option value="">June</option>
-            <option value="">July</option>
-            <option value="">August</option>
-            <option value="">September</option>
-            <option value="">October</option>
-            <option value="">November</option>
-            <option value="">December</option>
-        </select>
-    </div>
-    <div>
-        <label for="">Day</label>
-        <select name="" id="">
-            <option value="">1</option>
-            <option value="">2</option>
-            <option value="">3</option>
-            <option value="">4</option>
-            <option value="">5</option>
-            <option value="">6</option>
-            <option value="">7</option>
-            <option value="">8</option>
-            <option value="">9</option>
-            <option value="">10</option>
-        </select>
-    </div>
-    <div>
-        <label for="">Year</label>
-        <select name="" id="">
-            <option value="">2001</option>
-            <option value="">2002</option>
-            <option value="">2003</option>
-            <option value="">2004</option>
-            <option value="">2005</option>
-            <option value="">2006</option>
-            <option value="">2007</option>
-            <option value="">2008</option>
-            <option value="">2009</option>
-            <option value="">2010</option>
-        </select>
-    </div>
-    <div>
-        <label for="">City</label>
-        <input type="text" name="" id="">
-    </div>
-    <div>
-        <label for="">Province</label>
-        <input type="text" name="" id="">
-    </div>
-    <div>
-        <label for="">Zip Code</label>
-        <input type="number">
-    </div>
-    <div>
-        <label for="">Street Address</label>
-        <input type="text" name="" id="">
-    </div>
-    <div>
-        <label for="">Contact Number</label>
-        <input type="tel" pattern="[0-9]{4}-[0-9]{3}-[0-9]{4}" placeholder="0912-345-6789">
-    </div>
-    <div>
-        <label for="">E-mail Address</label>
-        <input type="email" placeholder="name@email.com">
-    </div>
-    <!-- education -->
-    <div>
-        <div>
-            <label for="">Primary School</label>
-            <input type="text">
+    <div class="form">
+        <div class="title">
+            <h1>STUDENT ENROLLMENT FORM</h1>
+            <p>Please fill-out the enrollment form carefully.</p>
         </div>
-        <div>
-            <label for="">Address</label>
-            <input type="text">
+        <div class="content">
+            <h2>Student Information</h2>
+            <!-- name -->
+            <h3>Name</h3>
+            <div class="flex flex-wrap justify-between">
+                <div>
+                    <label for="">First Name</label>
+                    <input type="text" name="" id="">
+                </div>
+                <div>
+                    <label for="">Middle Name</label>
+                    <input type="text" name="" id="">
+                </div>
+                <div>
+                    <label for="">Last Name</label>
+                    <input type="text" name="" id="">
+                </div>
+            </div>
+            <!-- address -->
+            <h3>Address</h3>  
+            <div>
+                <label for="">Street Address</label>
+                <input type="text" name="" id="">
+            </div>
+            <div class="flex flex-wrap justify-between">
+                <div>
+                    <label for="">City</label>
+                    <input type="text" name="" id="">
+                </div>
+                <div>
+                    <label for="">Province</label>
+                    <input type="text" name="" id="">
+                </div>
+                <div>
+                    <label for="">Zip Code</label>
+                    <input type="number">
+                </div>
+            </div>
+            <!-- birth date -->
+            <h3>Birth Date</h3>
+            <div class="flex flex-wrap justify-between">
+                <div>
+                    <label for="">Month</label>
+                    <select name="" id="">
+                        <option value="">January</option>
+                        <option value="">February</option>
+                        <option value="">March</option>
+                        <option value="">April</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="">Day</label>
+                    <select name="" id="">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                        <option value="">4</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="">Year</label>
+                    <select name="" id="">
+                        <option value="">2000</option>
+                        <option value="">2001</option>
+                        <option value="">2002</option>
+                        <option value="">2003</option>
+                        <option value="">2004</option>
+                    </select>
+                </div>
+            </div>
+            <!-- contact number -->
+            <div>
+                <label for="">Contact Number</label>
+                <input type="tel" pattern="[0-9]{4}-[0-9]{3}-[0-9]{4}" placeholder="0912-345-6789">
+            </div>
+            <!-- email -->
+            <div>
+                <label for="">E-mail Address</label>
+                <input type="email" placeholder="name@email.com">
+            </div>
+            <!-- educational background -->
+            <h2>Educational Background</h2>
+            <div>
+                <div>
+                    <label for="">Primary School</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="">Address</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="">Year Graduated</label>
+                    <select name="" id="">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                        <option value="">4</option>
+                        <option value="">5</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="">High School</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="">Address</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="">Year Graduated</label>
+                    <select name="" id="">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                        <option value="">4</option>
+                        <option value="">5</option>
+                    </select>
+                </div>
+            </div>
+            <!-- person to contact -->
+            <h2>Person to Contact</h2>
+            <div>
+                <label for="">Name</label>
+                <input type="text">
+            </div>
+            <div>
+                <label for="">Contact Number</label>
+                <input type="tel" pattern="[0-9]{4}-[0-9]{3}-[0-9]{4}" placeholder="0912-345-6789">
+            </div>
+            <div>
+                <label for="">Relationship</label>
+                <input type="text" name="" id="">
+            </div>
         </div>
-        <div>
-            <label for="">Year Graduated</label>
-            <select name="" id="">
-                <option value="">1</option>
-                <option value="">2</option>
-                <option value="">3</option>
-                <option value="">4</option>
-                <option value="">5</option>
-            </select>
-        </div>
-        <div>
-            <label for="">High School</label>
-            <input type="text">
-        </div>
-        <div>
-            <label for="">Address</label>
-            <input type="text">
-        </div>
-        <div>
-            <label for="">Year Graduated</label>
-            <select name="" id="">
-                <option value="">1</option>
-                <option value="">2</option>
-                <option value="">3</option>
-                <option value="">4</option>
-                <option value="">5</option>
-            </select>
-        </div>
-    </div>
-    <!-- person to contact -->
-    <div>
-        <label for="">Name</label>
-        <input type="text">
-    </div>
-    <div>
-        <label for="">Contact Number</label>
-        <input type="tel" pattern="[0-9]{4}-[0-9]{3}-[0-9]{4}" placeholder="0912-345-6789">
-    </div>
-    <div>
-        <label for="">Relationship</label>
-        <input type="text" name="" id="">
-    </div>
 </body>
 <script>
     feather.replace()
