--- a/src/index.html
+++ b/src/index.html
@@ -12,33 +12,33 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
     <!-- tailwindcss -->
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div class="form">
-        <div class="title">
-            <h1>STUDENT ENROLLMENT FORM</h1>
-            <p>Please fill-out the enrollment form carefully.</p>
+<body class="bg-neutral-200">
+    <div class="bg-neutral-50 text-neutral-600">
+        <div class="bg-cyan-600 text-white p-4">
+            <h1 class="font-bold text-2xl mb-1">STUDENT ENROLLMENT FORM</h1>
+            <p class="text-sm">Please fill-out the enrollment form carefully.</p>
         </div>
-        <div class="content">
-            <h2>Student Information</h2>
+        <div class="content m-4">
+            <h2 class="font-medium text-xl">Student Information</h2>
             <!-- name -->
             <h3>Name</h3>
-            <div class="flex flex-wrap justify-between">
-                <div>
+            <div class="flex flex-wrap flex-auto">
+                <div class="item w-64">
                     <label for="">First Name</label>
                     <input type="text" name="" id="">
                 </div>
-                <div>
+                <div class="item w-64">
                     <label for="">Middle Name</label>
                     <input type="text" name="" id="">
                 </div>
-                <div>
+                <div class="item w-64">
                     <label for="">Last Name</label>
                     <input type="text" name="" id="">
                 </div>
@@ -49,24 +49,24 @@
                 <label for="">Street Address</label>
                 <input type="text" name="" id="">
             </div>
-            <div class="flex flex-wrap justify-between">
-                <div>
+            <div class="flex flex-wrap">
+                <div class="item w-64">
                     <label for="">City</label>
                     <input type="text" name="" id="">
                 </div>
-                <div>
+                <div class="item w-64">
                     <label for="">Province</label>
                     <input type="text" name="" id="">
                 </div>
-                <div>
+                <div class="item w-64">
                     <label for="">Zip Code</label>
                     <input type="number">
                 </div>
             </div>
             <!-- birth date -->
             <h3>Birth Date</h3>
-            <div class="flex flex-wrap justify-between">
-                <div>
+            <div class="flex flex-wrap">
+                <div class="item w-32">
                     <label for="">Month</label>
                     <select name="" id="">
                         <option value="">January</option>
@@ -75,7 +75,7 @@
                         <option value="">April</option>
                     </select>
                 </div>
-                <div>
+                <div class="item w-32">
                     <label for="">Day</label>
                     <select name="" id="">
                         <option value="">1</option>
@@ -84,7 +84,7 @@
                         <option value="">4</option>
                     </select>
                 </div>
-                <div>
+                <div class="w-32">
                     <label for="">Year</label>
                     <select name="" id="">
                         <option value="">2000</option>
@@ -96,17 +96,17 @@
                 </div>
             </div>
             <!-- contact number -->
-            <div>
-                <label for="">Contact Number</label>
+            <div class="w-64">
+                <label for="" class="text-base text-neutral-600">Contact Number</label>
                 <input type="tel" pattern="[0-9]{4}-[0-9]{3}-[0-9]{4}" placeholder="0912-345-6789">
             </div>
             <!-- email -->
-            <div>
-                <label for="">E-mail Address</label>
+            <div class="w-64">
+                <label for="" class="text-base text-neutral-600">E-mail Address</label>
                 <input type="email" placeholder="name@email.com">
             </div>
             <!-- educational background -->
-            <h2>Educational Background</h2>
+            <h2 class="font-medium text-xl">Educational Background</h2>
             <div>
                 <div>
                     <label for="">Primary School</label>
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <!-- person to contact -->
-            <h2>Person to Contact</h2>
+            <h2 class="font-medium text-xl">Person to Contact</h2>
             <div>
                 <label for="">Name</label>
                 <input type="text">
