--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="../src/style.css">
+    <link rel="stylesheet" href="input.css">
 
     <!-- feathericons -->
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
